--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBp-eT6UGkE_HcM2R3R9bCJNvaoehFrjOg&callback=initMap"
+    async
+    defer
+></script>
   </body>
 </html>
